# news-summary-agent

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  news_agent_prd.md
backend/: .env  .env.example  Dockerfile  README.md  TROUBLESHOOTING.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0e049237622e_create_initial_database_tables.py
backend/scripts/: init.sql
backend/src/: __init__.py  config.py  database.py  main.py  schemas.py
backend/src/agents/: __init__.py
backend/src/api/: admin.py  articles.py  reading_list.py  research_agent.py  rss_feeds.py  search.py  summaries.py  tags.py
backend/src/models/: __init__.py
backend/src/routers/: __init__.py  articles.py
backend/src/services/: article_processing.py  langchain_agent.py  research_agent.py  rss_ingestion.py  vector_store.py
backend/src/utils/: __init__.py  error_handling.py  logging_config.py
backend/tests/: conftest.py  test_models.py
backend/tests/test_api/: test_articles.py  test_rss_feeds.py  test_tags.py
docs/: README.md  api-reference.md  architecture.md  change-log.md  decision-log.md  development-guide.md  features.md  implementation-plan.md  implementation-roadmap.md  project-status.md  setup-troubleshooting.md  tech-stack.md  usage-guide.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  setup-platform.sh  tailwind.config.js  vite.config.ts
frontend/e2e/: tag-filtering.spec.ts  tag-management.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: TagFilter.test.tsx  TagFilter.tsx
frontend/src/components/admin/: DeleteArticlesPanel.tsx  IngestionPanel.tsx  RSSFeedManagement.test.tsx  RSSFeedManagement.tsx  TagManagement.test.tsx  TagManagement.tsx
frontend/src/components/analysis/: MultiPerspectiveAnalysis.tsx
frontend/src/components/articles/: ArticleCard.tsx  ArticleList.tsx  SaveToReadingListButton.tsx
frontend/src/components/icons/: DistillIcon.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/search/: SearchInput.tsx  SearchResults.tsx
frontend/src/hooks/: useArticles.ts  useArticlesQuery.test.tsx  useArticlesQuery.ts  useSearch.ts  useSearchQuery.ts
frontend/src/pages/: Admin.tsx  Article.tsx  ArticleDetail.tsx  BrowseArticles.tsx  Help.tsx  Home.tsx  ReadingList.tsx  ResearchAgent.tsx  Search.tsx
frontend/src/services/: api.ts  readingListApi.ts
frontend/src/test/: mockData.ts  setup.ts  test-utils.tsx
frontend/src/types/: article.ts
