[project]
name = "news-summary-agent"
version = "1.0.0"
description = "Intelligent news aggregation and analysis system using RAG and AI agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "News Summary Agent Team" }
]
keywords = ["news", "ai", "rag", "llm", "fastapi", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # FastAPI and Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.9.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",

    # LangChain and AI
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "anthropic>=0.8.0",

    # Vector Database
    "chromadb>=0.4.0",

    # RSS Feed Processing
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",

    # Scheduling and Background Tasks
    "apscheduler>=3.10.0",
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Text Processing
    "nltk>=3.8.0",
    "spacy>=3.7.0",
    "sentence-transformers>=2.2.0",

    # Monitoring and Logging
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",

    # Rate Limiting
    "slowapi>=0.1.9",

    # CORS and Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    # Development and Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",

    # Code Quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
